@@ -1,5 +1,6 @@
 {{$NEXT}}
 
+    - Add table support to ctx->fail and ctx->fail_and_return
     - Fix Instance.t on haiku-os
 
 1.302158  2019-01-08 15:36:24-08:00 America/Los_Angeles (TRIAL RELEASE)
